add chart to Trget Coin page

--- a/Coin.html
+++ b/Coin.html
@@ -114,7 +114,9 @@
                 </div>
                 </div>
             </div>
-            <div class="history_chart"></div>
+            <div class="history_chart">
+                <div id="chartdiv"></div>
+            </div>
         </div>
         <div class="history_swap">
             <div class="swap_container">
@@ -203,5 +205,9 @@
         </div>
     </footer>
     <script src="Coin.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
+<!-- <script src="chartScript.js"></script> -->
 </body>
 </html>
